test/parser/traits/impl_decl_no_comma_or_body.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct S {
  impl A

  // CHECK: [[# @LINE + 1 ]]:3: error: expected ';' or '{'
  impl B
}
